# Wrong-Way

./: .gitignore  CONTRIBUTING.md  EPICS_AND_TICKETS.md  README.md  app.py  main.py  other_elevator_simulation_developer_guide.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DESIGN_NOTES.md  DEVELOPER_GUIDE.md
src/wrong_way/: __init__.py  analytics.py  cli.py  config.py  elevator_mode.py  metrics.py  simulation_core.py  subway_mode.py  tone.py  ui_streamlit.py
tests/: test_analytics.py  test_arrival_distributions.py  test_demand_rate.py  test_god_mode.py  test_immediate_pickup.py  test_integration.py  test_metrics.py  test_observer_validation.py  test_profiles.py  test_replay.py  test_scan_policy.py  test_statistical_behavior.py  test_subway_mode.py  test_tail_share.py  test_ui_smoke.py  test_wrong_way.py
