[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "wrong-way"
version = "0.1.0"
description = "A frustration simulator for elevator directional bias and perceived waiting time."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Wrong-Way Contributors" }
]
dependencies = [
  "streamlit>=1.43.0",
  "pandas>=2.2.0",
  "matplotlib>=3.8.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.6.0"
]

[project.scripts]
wrong-way-cli = "wrong_way.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
